# semantic_triples

./: .gitignore  Cargo.toml  README.md  build.rs  semantic_triples-exp.par  semantic_triples.par  test.txt
src/: main.rs  semantic_triples_grammar.rs  semantic_triples_grammar_trait.rs  semantic_triples_parser.rs
