[package]
name = "semantic_triples"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.11.2"
parol_runtime = { version = "0.20.1", features = ["auto_generation"] }
thiserror = "1.0.57"

[build-dependencies]
parol = "0.26.1"
parol_runtime = { version = "0.20.1", features = ["auto_generation"] }

# For faster builds.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
