[package]
name = "semantic_triples"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
parol_runtime = { version = "1.0", features = ["auto_generation"] }
thiserror = "1.0"

[build-dependencies]
parol = "1.0"
parol_runtime = { version = "1.0", features = ["auto_generation"] }

# For faster builds.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
